--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "download-and-install",
   "version": "1.0.0",
-  "description": "",
+  "description": "Download a Github repo, copy an array of files to a folder in the cwd and install the dependencies of the package.json from the repository",
   "main": "download-and-install.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
